# async-django-orm-adapter

./: pyproject.toml  requirements.txt
async_django_orm_adapter/: adapter.py  apps.py  enforcer.py  models.py
async_django_orm_adapter/migrations/: 0001_initial.py
tests/: settings.py  test_adapter.py
