[project]
name = "casbin-async_django_orm_adapter"
version = "1.3.0"
authors = [
    {name = "Yang Luo", email = "hsluoyz@qq.com"},
]
description = "Django's ORM async adapter for PyCasbin"
readme = "README.md"
keywords = [
    "casbin",
    "async",
    "adapter",
    "storage-driver",
    "django",
    "orm",
    "django-orm",
    "access-control",
    "authorization"
]
dynamic = ["dependencies"]
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Home-page = "https://github.com/pycasbin/async-django-orm-adapter"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 120